--- a/public/style.css
+++ b/public/style.css
@@ -18,3 +18,7 @@
 .table-item {
     position: relative;
 }
+.table-item.is-complete,
+.table-item.is-complete .complete-button {
+    color: #ABABAB;
+}
