--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,13 @@
     cursor: pointer;
     border: solid thin;
     border-radius: 3px;
-    padding: 1px 6px;
+    padding: 0px 4px 1px 4px;
     text-transform: uppercase;
+    font-size: 11px;
+}
+.container-fluid {
+    padding-right: 80px;
+    padding-left: 80px;
 }
 .complete-button:hover {
   background-color: #E7E7E7;
