--- a/public/style.css
+++ b/public/style.css
@@ -1,37 +1,38 @@
-.complete-button {
-    float: right;
-    color: #515151;
-    font-style: italic;
-    cursor: pointer;
-    border: solid thin;
-    border-radius: 3px;
-    padding: 0px 4px 1px 4px;
-    text-transform: uppercase;
-    font-size: 11px;
-}
-.container-fluid {
-    padding-right: 80px;
-    padding-left: 80px;
-}
-.complete-button:hover {
-  background-color: #E7E7E7;
-}
-.complete-button.complete {
-	color: #D1D1D1;
-}
+.task-app-outer .complete-button {
+  float: right;
+  color: #515151;
+  font-style: italic;
+  cursor: pointer;
+  border: solid thin;
+  border-radius: 3px;
+  padding: 0px 4px 1px 4px;
+  text-transform: uppercase;
+  font-size: 11px; }
 
-.table-item {
-    position: relative;
-    cursor: pointer;
-}
-.table-item.is-complete,
-.table-item.is-complete .complete-button {
-    color: #ABABAB;
-}
-.table-item.active,
-.table-item.active > td {
-    background-color: #d2d5ff !important;
-}
+.task-app-outer .table-item {
+  position: relative;
+  cursor: pointer; }
+
+.task-app-outer .table-item.is-complete .complete-button {
+  color: #ABABAB; }
+
+.task-app-outer .table-item.active > td {
+  background-color: #d2d5ff !important; }
+
+.blue {
+  font-size: 15px; }
+
+.container-fluid {
+  padding-right: 80px;
+  padding-left: 80px; }
+
+.complete-button:hover {
+  background-color: #E7E7E7; }
+
+.complete-button.complete {
+  color: #D1D1D1; }
+
 .todo-details-outer {
-    padding-top: 34px;
-}
+  padding-top: 34px; }
+
+/*# sourceMappingURL=style.css.map*/
