--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 .task-app-outer {
+    position: relative;
     .complete-button {
         float: right;
         color: #515151;
@@ -6,13 +7,14 @@
         cursor: pointer;
         border: solid thin;
         border-radius: 3px;
-        padding: 0px 4px 1px 4px;
+        padding: 2px 4px 0px 4px;
         text-transform: uppercase;
-        font-size: 11px;
+        color: inherit;
     }
     .table-item {
         position: relative;
         cursor: pointer;
+        font-size: 12px;
     }
     .table-item {
         &.is-complete {
